src/main/java/com/example/hhplus/concert/domain/support/error/ErrorCode.java
package com.example.hhplus.concert.domain.support.error;

public enum ErrorCode {
  NOT_FOUND,
  BAD_REQUEST,
  ;
}
